Padding/margin for callout boxes on mobile issue #14

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -4,4 +4,8 @@
     padding: 100px 0px 35px;
     h1 { margin-left: 5.4%; }
   }
+  .callout-box {
+    width: calc(100% - 70px);
+    margin: 0px 15px;
+  }
 }
